# provider-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
provider_mcp/: __init__.py  config.py  server.py
provider_mcp/backends/: pdl_reader.py  stresstest_client.py  terminal_reader.py
provider_mcp/tools/: alerts.py  exposure.py  scenarios.py  simulation.py
tests/: test_alerts.py  test_scenarios.py  test_simulation.py
