[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provider-mcp"
version = "0.1.0"
description = "PROVIDER MCP-Server – Versorgungssicherheits-Tools für Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
provider-mcp = "provider_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["provider_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
